--- a/OLC1-Proyecto1 2S2023/src/GUI/MainPanel.form
+++ b/OLC1-Proyecto1 2S2023/src/GUI/MainPanel.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.MainPanel">
-  <grid id="27dc6" binding="panel1" custom-create="true" default-binding="true" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="FirstPanel" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1204" height="724"/>
     </constraints>
     <properties>
-      <preferredSize width="1400" height="900"/>
+      <preferredSize width="800" height="900"/>
     </properties>
     <border type="none"/>
     <children>
-      <scrollpane id="5e0c7">
+      <scrollpane id="5e0c7" binding="scrollPane1">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -23,7 +23,7 @@
           </component>
         </children>
       </scrollpane>
-      <scrollpane id="12c22">
+      <scrollpane id="12c22" binding="scrollPane2">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,7 +32,13 @@
         <children>
           <component id="860a3" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints/>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="true"/>
+              <focusable value="false"/>
+              <requestFocusEnabled value="false"/>
+              <verifyInputWhenFocusTarget value="false"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
